# ginuudan

./: .gitignore  Dockerfile  README.md  actions.yml  ginuudan.py  pyproject.toml  run.py
.github/workflows/: ginuudan.yaml  ginuudan.yml  naisjob.yml
.nais/: clusterrole.yaml  clusterrolebinding.yaml  ginuudan.yaml  ginuudan.yml  naisjob.yml  networkpolicy.yaml
ginuudan/: __main__.py  actions.py  kube.py  logger.py  prometheus.py  spec.py  spec_utils.py  utils.py
ginuudan/kube/: __init__.py  exec.py  port_forward.py
test_specs/: job.yaml  onpremtest.yaml
